# n00b

./: .clang-format-ignore  .clangd  .dockerignore  .gitignore  .sanitize_ignore  Dockerfile  Dockerfile.test  LICENSE  dev  docker-bake.hcl  docker-compose.yaml  meson.build  meson.options
.github/workflows/: tests.yml
doc/: features.md  reference.md
include/: cobject.h  hatrack.h  n00b.h  ncpp.h  obj_inline.h  quark.h  vendor.h
include/adts/: bloom.h  box.h  box_inline.h  buffer.h  buffer_inline.h  bytering.h  bytering_inline.h  callback.h  codepoint.h  datetime.h  datetime_inline.h  dict.h  dt_box.h  dt_buffers.h  dt_callbacks.h  dt_flags.h  dt_grids.h  dt_lists.h  dt_mixed.h  dt_streams.h  dt_strings.h  dt_trees.h  dt_tuples.h  duration.h  duration_inline.h  flags.h  grid.h  hash.h  ipaddr.h  list.h  lists.h  lists_inline.h  mixed.h  mixed_inline.h  net_addr.h  number.h  set.h  stream.h  string.h  table.h  (+4 more)
include/channels/: channel.h  channel_buffer.h  channel_cb.h  channel_exit.h  channel_fd.h  channel_proxy.h  channel_string.h  channel_topic.h  debug.h  fd_event.h  filter.h  filter_json.h  http.h  marshal.h  print.h  proc.h  session.h  terminal_io.h
include/compiler/: ast_utils.h  cfg.h  cfgs.h  codegen.h  compile.h  dt_cfgs.h  dt_compile.h  dt_errors.h  dt_lex.h  dt_nodeinfo.h  dt_parse.h  dt_scopes.h  dt_specs.h  error_api.h  errors.h  instruction.h  lex.h  lex_inline.h  memmodel.h  module.h  module_inline.h  nodeinfo.h  parse.h  parse_inline.h  rtmodule.h  scope.h  scope_inline.h  spec.h
include/core/: builtin_ctypes.h  builtin_tinfo_gen.h  cmethod.h  cobject_api.h  ctype_info.h  dt_alloc.h  dt_exceptions.h  dt_ffi.h  dt_kargs.h  dt_literals.h  dt_objects.h  dt_types.h  dt_ufi.h  dt_vm.h  env.h  exception.h  exception_inline.h  exceptions.h  exit.h  ffi.h  gc.h  hash.h  heap.h  heap_inline.h  init.h  kargs.h  kargs_inline.h  literal.h  literal_api.h  literals.h  locks.h  marshal.h  module.h  obj_inline.h  object.h  refcount.h  reference.h  signal.h  thread.h  tsi.h  (+7 more)
include/crypto/: dt_crypto.h  sha.h
include/debug/: debug.h  debug_inline.h  dlogf.h  dump.h  memring.h  server.h  streams.h  topic_api.h  workflow.h
include/hatrack/: arr64.h  ballcap.h  base.h  bloom.h  capq.h  counters.h  crown.h  debug.h  dict.h  duncecap.h  flexarray.h  gate.h  hash.h  hatomic.h  hatrack_common.h  hatrack_config.h  hatring.h  helpmanager.h  hihat.h  hq.h  htime.h  llstack.h  logring.h  lohat-a.h  lohat.h  lohat_common.h  malloc.h  mmm.h  newshat.h  oldhat.h  q64.h  queue.h  refhat.h  set.h  stack.h  swimcap.h  tiara.h  tophat.h  vector.h  witchhat.h  (+3 more)
include/io/: ansi.h  channel.h  channel_cb.h  channel_exit.h  channel_fd.h  channel_proxy.h  channel_string.h  channel_topic.h  debug.h  dt_io.h  fd3.h  fd_event.h  fd_inline.h  file.h  filter.h  filters.h  http.h  http_inline.h  iocore.h  ioqueue.h  marshal.h  observable.h  observable_inline.h  observers.h  print.h  proc.h  proc_inline.h  sb2.h  session.h  session_inline.h  stream.h  stream_buffer.h  stream_cb.h  stream_exit.h  stream_fd.h  stream_inline.h  stream_proxy.h  stream_string.h  stream_topic.h  subproc.h  (+3 more)
include/mt/: atomic.h  condition.h  futex.h  futex_inline.h  gil.h  lock_api.h  lock_common.h  mutex.h  once.h  rwlock.h  thread.h  tsi.h  tsi_inline.h
include/n00b/: base.h  cmd.h  config.h  datatypes.h  debug_config.h  test_harness.h
include/runtime/: ffi.h  vm.h
include/test/: testhat.h
include/text/: ansi.h  breaks.h  breaks_inline.h  codepoint.h  codepoint_inline.h  color_gen.h  colors.h  dt_codepoints.h  dt_colors.h  regex.h  regex_inline.h  rich.h  string.h  string_inline.h  style.h  style_inline.h  table.h  table_inline.h  theme.h  theme_inline.h  word_breaks.h
include/util/: assert.h  bnf.h  breaks.h  cbacktrace.h  close.h  color.h  compress.h  conststr.h  crypto.h  defer.h  dt_colors.h  dt_format.h  dt_styles.h  dt_tree_patterns.h  filter.h  format.h  fp.h  getopt.h  getopt_inline.h  hex.h  highlights.h  json.h  layout.h  limits.h  macros.h  markdown.h  math.h  notify.h  nowarn.h  nowarn_pop.h  parsing.h  parsing_inline.h  path.h  path_inline.h  plock.h  random.h  rich.h  richlit.h  sleep.h  style.h  (+7 more)
src/: README.md
src/adts/: README.md  bloom.c  box.c  box.nc  buffer.c  buffer.nc  bytering.c  bytering.nc  callback.c  datetime.c  datetime.nc  dict.c  dict.nc  duration.c  duration.nc  flags.c  flags.nc  grid.c  hatlists.c  hatlists.nc  ht.nc  ipaddr.c  list.c  list.nc  mixed.c  mixed.nc  net_addr.c  net_addr.nc  numbers.c  numbers.nc  set.c  set.nc  size.c  size.nc  streams.c  string.c  table.c  tree.c  tree.nc  tuple.c  (+2 more)
src/c-demos/: iodemo.c
src/channels/: chan_buffer.c  chan_callback.c  chan_exit.c  chan_fd.c  chan_listener.c  chan_proxy.c  chan_string.c  chan_topic.c  channel.c  debug.c  fd_events.c  filter.c  filter_color.c  filter_hexdump.c  filter_json.c  filter_linebuf.c  filter_marshal.c  http.c  observable.c  (+7 more)
subprojects/: libbacktrace.wrap  libcurl.wrap  libevent.wrap  libunibreak.wrap  linuxheaders.wrap  openssl.wrap  utf8proc.wrap
subprojects/packagefiles/libbacktrace/: meson.build
subprojects/packagefiles/libcurl/: meson.build
subprojects/packagefiles/libevent/: meson.build
subprojects/packagefiles/libffi/: meson.build
subprojects/packagefiles/libunibreak/: meson.build
subprojects/packagefiles/linuxheaders/: meson.build
subprojects/packagefiles/openssl/: meson.build
sys/: __init.n00b  builtins.n  builtins.n00b  file.n  list.n  random.n  string.n  string.n00b  time.n00b
tests/: assignops_all.n00b  assignops_divide.n00b  assignops_multiply.n  assignops_shift_left.n  assignops_shift_right.n00b  assignops_xor.n00b  attrs.n  basic01.n00b  basic03.n00b  basic04.n  basic04.n00b  basic05.n00b  basic06.n00b  basic08.n00b  basic09.n00b  basic11.n  basic12.n00b  basic14.n00b  basic15.n00b  basic17.n00b  basic18.n00b  basic19.n00b  basic20.n00b  basic21.n00b  basic23.n00b  basic24.n  basic24.n00b  basic25.n00b  basic_if.n  break.n00b  breaks.n  builtins.n00b  cb.n00b  crash.n  decls.n00b  decls2.n  dict.n  dt.n00b  duration.n  empty.n00b  (+38 more)
todo/: dead.n00b  params.n00b
(+401 files in other folders)
